# bootstrap

./: CMakeLists.txt  README.rst  boost.patch  bootstrap.sh  hosts  ticpp.patch
ansible/: ansible.cfg  cosm-deps.yaml  develserver-init.yaml  hosts  libra-deps.yaml  rcppsw-deps.yaml  rcsw-rebuild.yaml  repos-rebuild.yaml  repos-update.yaml  ros1-init.yaml  ros1-setup.yaml  rosbridge-build.yaml  rosbridge-init.yaml  rosbridge-rebuild.yaml  rosbridge-update.yaml  setup.bash  turtlebot-init.yaml  turtlebot-rebuild.yaml  turtlebot.yaml
ansible/tasks/: cmake-add-apt-sources.yaml  ros1-add-apt-sources.yaml  ros1-bash-setup.yaml  turtlebot-bootstrap.yaml  turtlebot-configure-users.yaml  turtlebot-update-firmware.yaml
ansible/vars/: cmake-config.yaml  develserver-config.yaml  repo-config.yaml  ros1-config.yaml  turtlebot-config.yaml
scripts/: Dockerfile.osx-ventura  Dockerfile.ubuntu
turtlebot/: 50-cloud-init.yaml  sshtunnel.service  sshtunnel_start.sh  turtlebot.sh
